[package]
name = "rust_ping_pong_udp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zenoh"
path = "src/zenoh.rs"

[[bin]]
name = "zenoh_sync"
path = "src/zenoh_sync.rs"

[[bin]]
name = "udp"
path = "src/udp.rs"

[[bin]]
name = "socket_file"
path = "src/socket_file.rs"

[[bin]]
name = "tokio"
path = "src/tokio.rs"


[[bin]]
name = "threads"
path = "src/threads.rs"

[dependencies]
tempfile = "3.17.1"
tokio = { version = "1", features = ["full"] }
zenoh = "1.2.1"
